--- a/src/app/poll-option-dialog/poll-option-dialog.component.html
+++ b/src/app/poll-option-dialog/poll-option-dialog.component.html
@@ -1,35 +1,34 @@
-<ng-container *ngIf="{ loading: showLoading$ | async }; let status">
+@if ({ loading: showLoading$ | async }; as status) {
   <h1 mat-dialog-title>👏 Choose this!</h1>
-
-  <div class="dice-roll" *ngIf="status.loading">
-    <mat-icon class="animation-roll" color="primary">casino</mat-icon>
-  </div>
-
+  @if (status.loading) {
+    <div class="dice-roll">
+      <mat-icon class="animation-roll" color="primary">casino</mat-icon>
+    </div>
+  }
   <div
     class="content"
     [style.visibility]="!status.loading ? 'visible' : 'hidden'"
     [@fadeInOut]="!status.loading"
-  >
-    <ng-container *ngIf="!pollItem.movieId && !pollItem.seriesId">
+    >
+    @if (!pollItem.movieId && !pollItem.seriesId) {
       <mat-card transition-group-item class="option-card">
         <div class="name">{{ pollItem.name }}</div>
       </mat-card>
-    </ng-container>
-    <ng-container *ngIf="pollItem.movieId">
+    }
+    @if (pollItem.movieId) {
       <movie-poll-item
         [pollItem]="pollItem"
         [showCreator]="pollItem.creator"
         [reactable]="false"
       ></movie-poll-item>
-    </ng-container>
-    <ng-container *ngIf="pollItem.seriesId">
+    }
+    @if (pollItem.seriesId) {
       <series-poll-item
         [pollItem]="pollItem"
         [showCreator]="pollItem.creator"
       ></series-poll-item>
-    </ng-container>
+    }
   </div>
-
   <div mat-dialog-actions>
     <button
       class="close-btn"
@@ -38,10 +37,9 @@
       [mat-dialog-close]="true"
       aria-label="Ok"
       (click)="onOk()"
-    >
+      >
       Ok
     </button>
   </div>
-
   <ng-template #loading> </ng-template>
-</ng-container>
+}
