--- a/src/app/watch-providers/select-providers-dialog/select-providers-dialog.html
+++ b/src/app/watch-providers/select-providers-dialog/select-providers-dialog.html
@@ -3,32 +3,31 @@
     <div class="close-button cursor-pointer" (click)="closeDialog()">Close</div>
   </div>
   <h2>My movie providers</h2>
-  <div
-    class="watch-providers-container"
-    *ngIf="
+  @if (
     {
-      available: availableWatchProviders$ | async,
-      selected: tmpSelectedWatchProviders
-    };
-    let status
-  "
-  >
-    <div class="scrollable-container">
-      <div
-        class="watch-provider"
-        *ngFor="let provider of status.available"
+    available: availableWatchProviders$ | async,
+    selected: tmpSelectedWatchProviders
+    }; as status
+    ) {
+    <div
+      class="watch-providers-container"
+      >
+      <div class="scrollable-container">
+        @for (provider of status.available; track provider) {
+          <div
+            class="watch-provider"
         [class.selected]="
         status.selected.length === 0 ||
         status.selected.includes(provider.provider_id)
       "
-      >
-        <mat-checkbox
-          [ngModel]="status.selected.includes(provider.provider_id)"
-          (change)="toggleWatchProvider(provider.provider_id)"
-        >
-        </mat-checkbox>
-        <div
-          class="watch-provider-image"
+            >
+            <mat-checkbox
+              [ngModel]="status.selected.includes(provider.provider_id)"
+              (change)="toggleWatchProvider(provider.provider_id)"
+              >
+            </mat-checkbox>
+            <div
+              class="watch-provider-image"
           [ngStyle]="{
         'background-image': provider.logo_path
           ? 'url(https://image.tmdb.org/t/p/' +
@@ -37,11 +36,13 @@
             ')'
           : 'linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%)'
       }"
-        ></div>
-        {{ provider.provider_name }}
+            ></div>
+            {{ provider.provider_name }}
+          </div>
+        }
       </div>
     </div>
-  </div>
+  }
 </div>
 <div mat-dialog-actions>
   <button
@@ -51,7 +52,7 @@
     aria-label="Save"
     (click)="save()"
     class="save-btn"
-  >
+    >
     Save
   </button>
 </div>
